# streamlit-pandasai

./: .gitignore  README.md  data.py  instructions.md  pyproject.toml  requirements.txt  streamlit_app.py  test.py  test2.py  test3.py  test4_visual.py
data/: myport2.csv
